--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "degen-dapp-test",
   "private": true,
   "version": "0.1.0",
+  "engines": {
+    "yarn": "^1.22.22"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.51.11",
+    "framer-motion": "^11.3.29",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -19,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^18.19.3",
     "@types/react": "^18.3.0",
+    "eslint": "^9.9.0",
     "typescript": "5.4.2"
   }
 }
