--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.51.11",
     "framer-motion": "^11.3.29",
+    "lightweight-charts": "^4.2.0",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
